CF2-576 Fix spacing on collapse chip list empty state

--- a/src/app/shared/components/collapsed-chip-list/collapsed-chip-list.component.scss
+++ b/src/app/shared/components/collapsed-chip-list/collapsed-chip-list.component.scss
@@ -20,4 +20,5 @@
 
 .none {
   color: mat-foreground($theme, disabled);
+  margin-left: 3px; // Match spacing for chip lists (defined in our global styles)
 }
